--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "alexa-app": "^4.2.3"
+    "alexa-app": "^4.2.3",
+    "request": "^2.88.0"
   }
 }
