--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "alexa-app": "^4.2.3",
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "moment": "^2.24.0",
     "request": "^2.88.0"
   }
