--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "alexa-app": "^4.2.3",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
-    "moment": "^2.24.0",
-    "request": "^2.88.0"
+    "moment": "^2.24.0"
   }
 }
